navbar z-index fixing

--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -92,6 +92,8 @@
   box-shadow: 0 0 0 .2rem rgba(255,255,255,.25);
 }
 
+.navbar.fixed-top { z-index: 1200 !important; }
+
 
 
 
